--- a/requirements.in
+++ b/requirements.in
@@ -1,18 +1,18 @@
 # Requirements of leprikon
-Django<2
+Django
 PyPDF2
 certbot
 certbot-nginx
 cmsplugin-filer
 django-bankreader
-django-cms<3.7
+django-cms
 django-countries
 django-cron
 django-excel
 django-filer<1.6
 django-ganalytics
-django-haystack<2.8
-django-localflavor<2
+django-haystack
+django-localflavor
 django-mathfilters
 django-multiselectfield
 django-pays
@@ -21,8 +21,12 @@ django-staticfiles-downloader
 django-template-admin
 django-user-unique-email
 django-verified-email-field
+djangocms-admin-style
+djangocms-audio
+djangocms-file
 djangocms-googlemap
 djangocms-link
+djangocms-picture
 djangocms-snippet
 djangocms-style
 djangocms-text-ckeditor
