--- a/requirements.txt
+++ b/requirements.txt
@@ -15,24 +15,24 @@ chardet==3.0.4            # via requests
 cmsplugin-filer==1.1.3
 configargparse==1.1       # via certbot
 configobj==5.0.6          # via certbot
-cryptography==2.8         # via acme, certbot, josepy, pyopenssl, requests
+cryptography==2.8         # via acme, certbot, josepy, pyopenssl, requests, social-auth-core
 decorator==4.4.2          # via ipython, traitlets
 defusedxml==0.6.0         # via python3-openid, social-auth-core
 distro==1.4.0             # via certbot
 django-appconf==1.0.3     # via cmsplugin-filer
 django-bankreader==0.6.1
 django-classy-tags==1.0.0  # via django-cms, django-sekizai
-django-cms==3.6.0
+django-cms==3.7.1
 django-common-helpers==0.9.2  # via django-cron
-django-countries==6.0
+django-countries==6.1
 django-cron==0.5.1
 django-excel==0.0.10
 django-filer==1.5.0
 django-formtools==2.2     # via django-cms
 django-ganalytics==0.7.0
-django-haystack==2.7.0
+django-haystack==2.8.1
 django-js-asset==1.2.2    # via django-mptt
-django-localflavor==1.6.2
+django-localflavor==3.0
 django-mathfilters==1.0.0
 django-mptt==0.11.0       # via django-filer
 django-multiselectfield==0.1.12
@@ -45,16 +45,19 @@ django-template-admin==1.1.1
 django-treebeard==4.3.1   # via django-cms
 django-user-unique-email==0.1.1
 django-verified-email-field==1.6.1
-django==1.11.29
-djangocms-admin-style==1.5.0  # via django-cms
-djangocms-attributes-field==1.2.0  # via cmsplugin-filer, djangocms-link, djangocms-style, djangocms-video
+django==2.2.11
+djangocms-admin-style==1.5.0
+djangocms-attributes-field==1.2.0  # via cmsplugin-filer, djangocms-audio, djangocms-file, djangocms-link, djangocms-picture, djangocms-style, djangocms-video
+djangocms-audio==1.3.0
+djangocms-file==2.4.0
 djangocms-googlemap==1.4.0
 djangocms-link==2.5.0
+djangocms-picture==2.4.0
 djangocms-snippet==2.3.0
 djangocms-style==2.3.0
 djangocms-text-ckeditor==3.9.0
 djangocms-video==2.3.0
-easy-thumbnails==2.7      # via cmsplugin-filer, django-filer
+easy-thumbnails==2.7      # via cmsplugin-filer, django-filer, djangocms-picture
 html2rml==0.3.0
 html5lib==1.0.1           # via djangocms-text-ckeditor
 idna==2.9                 # via requests
@@ -81,7 +84,7 @@ pyexcel-webio==0.1.4      # via django-excel
 pyexcel-xlsxw==0.4.2
 pyexcel==0.5.15           # via django-excel, pyexcel-webio
 pygments==2.6.1           # via ipython
-pyicu==2.4.2
+pyicu==2.4.3
 pyjwt==1.7.1              # via social-auth-core
 pymongo==3.10.1
 pyopenssl==19.1.0         # via acme, certbot-nginx, josepy, requests
@@ -89,21 +92,23 @@ pyparsing==2.4.6          # via certbot-nginx
 pypdf2==1.26.0
 pyrfc3339==1.1            # via acme, certbot
 python-memcached==1.59
+python-stdnum==1.13       # via django-localflavor
 python3-openid==3.1.0     # via social-auth-core
 pytz==2019.3              # via acme, certbot, django, django-staticfiles-downloader, pyrfc3339
 qrcode==6.1               # via django-qr-code
-reportlab==3.5.34
+reportlab==3.5.42
 requests-oauthlib==1.3.0  # via social-auth-core
 requests-toolbelt==0.9.1  # via acme
 requests[security]==2.23.0
 rocketchat-api==1.2.2
-sentry-sdk==0.14.2
+sentry-sdk==0.14.3
 six==1.14.0               # via acme, configobj, cryptography, django-appconf, django-classy-tags, django-sekizai, html5lib, josepy, pyopenssl, python-memcached, qrcode, social-auth-app-django, social-auth-core, traitlets
 social-auth-app-django==3.1.0
-social-auth-core==3.2.0   # via social-auth-app-django
+social-auth-core==3.3.0   # via social-auth-app-django
+sqlparse==0.3.1           # via django
 texttable==1.6.2          # via pyexcel
 traitlets==4.3.3          # via ipython
-unidecode==1.0.23         # via django-filer
+unidecode==1.0.23         # via django-filer, social-auth-core
 urllib3==1.25.8           # via requests, sentry-sdk
 uwsgi==2.0.18
 wcwidth==0.1.8            # via prompt-toolkit
@@ -115,8 +120,8 @@ zope.deferredimport==4.3.1  # via zope.component
 zope.deprecation==4.4.0   # via zope.component
 zope.event==4.4           # via zope.component
 zope.hookable==5.0.1      # via zope.component
-zope.interface==4.7.2     # via certbot, certbot-nginx, zope.component, zope.proxy
-zope.proxy==4.3.4         # via zope.deferredimport
+zope.interface==5.0.1     # via certbot, certbot-nginx, zope.component, zope.proxy
+zope.proxy==4.3.5         # via zope.deferredimport
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
